@@ -1,3 +1,12 @@
+2011-09-20 Charles Suprin <hamaa1vs at gmail.com>
+
+    * ChangeLog
+    * src/sgpsdp/sgp_in.c
+    * src/tle-update.c
+    * src/gtk-sat-data.c
+    Eliminate segfaults for some .sat file corruption.
+
+
 2011-09-19 Charles Suprin <hamaa1vs at gmail.com>
 
     * ChangeLog
